libs/@local/hashql/ast/tests/ui/lowering/special-form-expander/if-4.jsonc
//@ run: fail
//@ description: if/4 should error out
[
  "::kernel::special_form::if",
  { "#literal": true },
  { "#literal": true },
  { "#literal": true },
  { "#literal": true }
  //~^ ERROR Remove this argument
]
